# Clairevoyance-CPP

./: .gitignore  CMakeLists.txt  README.md  test.cpp
core/models/: portfolio.cpp  pricehistory.cpp
core/models/headers/: portfolio.h  pricehistory.h
core/predictor/: analyzer.cpp
core/predictor/headers/: analyzer.h
core/trading/: strategy.cpp
core/trading/headers/: strategy.h
include/: analyzer.h  customhashes.h  dataprocessor.h  enums.h  portfolio.h  pricehistory.h  serializable.h  series.h  strategy.h
lib/models/: portfolio.cpp  pricehistory.cpp  series.cpp
lib/predictor/: analyzer.cpp
lib/trading/: strategy.cpp
lib/utils/: analyzer.cpp  dataprocessor.cpp
